Fix alignment of all add buttons

--- a/frontend/src/app/action-plan/action-plan.component.scss
+++ b/frontend/src/app/action-plan/action-plan.component.scss
@@ -60,6 +60,3 @@
   margin-left: -0.8rem;
 }
 
-.add-action-text {
-  margin-bottom: 5px;
-}
