--- a/frontend/src/app/objective/objective.component.scss
+++ b/frontend/src/app/objective/objective.component.scss
@@ -44,7 +44,3 @@
     margin-left: 30px;
   }
 }
-
-.add-keyresult-text {
-  margin-bottom: 5px;
-}
